# pldm

./: fw_update_test.cpp  fw_update_test.hpp  meson.build
libncsi/: meson.build  ncsi_util.cpp  ncsi_util.hpp
libpldm/: base.h  fw_update.c  fw_update.h  meson.build  platform.c
pldmd/: pldmd.cpp
pldmtool/: meson.build  ncsi.service  ncsi_client.cpp  ncsi_client.service  ncsi_util.cpp  ncsitool.cpp  pldm_cmd_helper.cpp  pldm_cmd_helper.hpp  pldm_platform_cmd.cpp
